--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,58 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">La barra do progreisso</h4>
+        <div class="progress">
+          <div
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuenow="75"
+          [attr.ariaValuenow] = "progreso1"
+          aria-valuemin="0"
+          [attr.ariaValuemin] = "0"
+          aria-valuemax="100"
+          [attr.ariaValuemax] = "100"
+          style="width: 75%"
+          [style.width]="progreso1 +'%'"
+          >
+        </div>
+        </div>
+        <hr>
+        <div class="progress">
+          <div
+          class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+          role="progressbar"
+          aria-valuenow="75"
+          [attr.ariaValuenow] = "progreso2"
+          aria-valuemin="0"
+          [attr.ariaValuemin] = "0"
+          aria-valuemax="100"
+          [attr.ariaValuemax] = "100"
+          style="width: 75%"
+          [style.width]="progreso2 +'%'"
+          >
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador  (updateValor)="( progreso1 = $event )" [nombreLeyenda]="'barra azul'" [progreso]="progreso1"></app-incrementador>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-6">
+      <div class="card">
+        <div class="card-body">
+          <app-incrementador (updateValor)="( progreso2 =  $event )"  [nombreLeyenda]="'barra verde'" [progreso]="progreso2"></app-incrementador>
+          </div>
+        </div>
+      </div>
+  </div>
