--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,28 @@
   margin: auto;
 }
 
+.w70{
+  width: 70px;
+}
+
 .input100{
 
+}
+
+.img-50{
+  width: 50px;
+}
+
+.fondo-negro{
+  background-color: rgba(220, 20, 60, 0.568);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+
+.oculto{
+  display: none;
 }
